2006-07-28  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc: fixed proto comparision when using hftp with ftp url scheme.

2006-07-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: optimize FileSet::Merge.
	* NetAccess.cc: make sure FileSet is properly sorted after tilde
	  transformation.

2006-07-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: change use_propfind_now in Reconfig.
	* FileAccess.cc: add references to classes which are used in modules,
	  this fixes static compilation.
	* lftp.cc: remove DirColors reference (in FileAccess.cc now).
	* Makefile.am: better use of libtool capabilities.

2006-07-25  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: use timestamp only if it's precise.
	* HttpDir.cc: fix month off-by-one.
	* FileCopy.cc: use SetSize so that seek_pos gets changed from FILE_END;
	  debug state changes.
	* Makefile.am: use liblib.la; don't use lib for includes.

2006-07-22  Nix  <nix@esperi.org.uk>

        Adapt to synch with gnulib-20060722.

        * ChmodJob.cc: filemode.h needs CDECL guards.
        * ChmodJob.cc (ChmodJob): mode_free() is gone, just free() now.
        * ChmodJob.cc (GetMode): Adjust mode_adjust() prototype, keeping
        current behaviour by deactivating umasking (which is meaningless
        on remote systems in any case).
        * ChmodJob.cc (CurrentFinished): mode_string() is now named strmode().
        * ChmodJob.cc (RelativeMode): mode_change is now an array, not a
        linked list.
        * ColumnOutput.cc (append): mbswidth()'s flags have flipped.
        * FindJobDu.cc (print_size): human_readable() and human_readable_inexact()
        have merged.
        * FileSetOutput.cc: filemode.h needs CDECL guards.
        * FileSetOutput.cc (print): human_readable(), mode_string() and mbswidth
        flag changes as above.
        * MirrorJob.cc (ShowRunStatus): mbswidth flag changes.
        * StatusLine.cc (update): Likewise.